Stop zooming on double tap on iOS

--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body {
     position: absolute;
     inset: 0;
     background-color: #303030;
+    touch-action: manipulation;
 }
 label {
     display: flex;
